// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI Integration ('Output Mode: Flat With Secret') > should generate expected files > generate-output-with-secret/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 6ccfb32474de374740ea26c1a62289609d575b6777b25d95f35ef138812fc936
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 0fcef65c1f415f60fa903b46838df70b24c27adecf50224010d235d17668dd69
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
          env:
            - name: API_KEY
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key
            - name: API_KEY_2
              valueFrom:
                secretKeyRef:
                  name: secret-application
                  key: my_app_key_2
      imagePullSecrets:
        - name: secret-application-provider
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 02cca01a4aa43a0cbe8d6890285b958a335bc324a51af9a530acd414230d44ca
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Flat') > should generate expected files > generate-output-flat/output/stacks.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 6ccfb32474de374740ea26c1a62289609d575b6777b25d95f35ef138812fc936
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 588ec9d92f3a0110384478f56d1a514d7e490c98b23abb7c48843dc14c2935b1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 02cca01a4aa43a0cbe8d6890285b958a335bc324a51af9a530acd414230d44ca
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Deployment_deployment.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 588ec9d92f3a0110384478f56d1a514d7e490c98b23abb7c48843dc14c2935b1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/frontend/Service_service.yml 1`] = `
"apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 02cca01a4aa43a0cbe8d6890285b958a335bc324a51af9a530acd414230d44ca
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Resource') > should generate expected files > generate-output-resource/output/namespace/Namespace_namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 6ccfb32474de374740ea26c1a62289609d575b6777b25d95f35ef138812fc936
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/frontend.yml 1`] = `
"apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: deployment
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 588ec9d92f3a0110384478f56d1a514d7e490c98b23abb7c48843dc14c2935b1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - image: nginx
          name: my-app
          ports:
            - containerPort: 80
---

apiVersion: v1
kind: Service
metadata:
  name: my-app
  namespace: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: frontend
    kubricate.thaitype.dev/resource-id: service
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/simple-app"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 02cca01a4aa43a0cbe8d6890285b958a335bc324a51af9a530acd414230d44ca
spec:
  selector:
    app: my-app
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
---
"
`;

exports[`CLI Integration ('Output Mode: Stack') > should generate expected files > generate-output-stack/output/namespace.yml 1`] = `
"apiVersion: v1
kind: Namespace
metadata:
  name: my-namespace
  labels:
    kubricate.thaitype.dev: "true"
    kubricate.thaitype.dev/stack-id: namespace
    kubricate.thaitype.dev/resource-id: namespace
  annotations:
    kubricate.thaitype.dev/stack-template-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-name: "@kubricate/stacks/namespace"
    kubricate.thaitype.dev/stack-template-core-version: 0.22.0
    kubricate.thaitype.dev/stack-template-version: 0.22.0
    kubricate.thaitype.dev/stack-template-author: Kubricate Team
    kubricate.thaitype.dev/stack-template-repository: https://github.com/thaitype/kubricate
    kubricate.thaitype.dev/resource-hash: 6ccfb32474de374740ea26c1a62289609d575b6777b25d95f35ef138812fc936
---
"
`;
